# OpenLibrary-Automation

./: .gitignore  README.md  ReadMeAIBugs.md  conftest.py  main.py  performance_report.html  performance_report.json  pyproject.toml  requirements.txt
config/: __init__.py  config.json  config.yaml  loader.py
data/: test_data.csv  test_data.json  test_data.yaml
pages/: base_page.py  book_details_page.py  home_page.py  login_page.py  user_books_page.py
templates/: performance_report_template.html
tests/: test_book_details_page.py  test_flow_api_signatures.py  test_home_page.py  test_login_page.py  test_openlibrary.py  test_performance_helper.py
utils/: data_loader.py  helpers.py  openlibrary_flow_api.py  performance_helper.py  reading_list_utils.py  screenshot_utils.py  search_utils.py  test_data_loader.py
utils/performance/: __init__.py  performance_helper.py  performance_html_report.py  performance_repository.py  report_opener.py  run_lifecycle.py
